--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ercise 2<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
@@ -13,21 +13,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Management Assessment</title>
+    <title>Exercise 2</title>
 </head>
 <body>
 
     <!-- Welcome Page -->
     <div class="container" id="welcome">
-        <h1>Welcome to the Time Management Assessment</h1>
-        <p>As part of your Team Effectiveness Programme, this assessment is here to help you reflect on your current practices and habits.</p>
-        <p>Please take your time to answer each question thoughtfully. For each statement, select the option that best reflects your experience. There are no right or wrong answers – just respond based on what feels most accurate to you.</p>
+        <h1>Exercise 2</h1>
+            <p>Please take your time to answer each question thoughtfully. For each statement, select the option that best reflects your experience. There are no right or wrong answers – just respond based on what feels most accurate to you.</p>
         <button class="start-button" onclick="startAssessment()">Start</button>
     </div>
 
     <!-- Assessment Page -->
     <div class="container" id="assessment" style="display: none;">
-        <h1>Time Management Assessment</h1>
+        <h1>Exercise 2</h1>
         <div id="questionContainer"></div>
         <button class="button" id="submit" style="display: none;">Submit</button>
 
